e: updated keyboard shortcuts

--- a/e/e.cfg
+++ b/e/e.cfg
@@ -829,8 +829,16 @@ group "E_Config" struct {
             value "any_mod" uchar: 0;
             value "context" int: 9;
             value "key" string: "Pause";
-            value "modifiers" int: 4;
+            value "modifiers" int: 3;
             value "params" string: "dbus-send --type=method_call --dest=org.freedesktop.Notifications /org/freedesktop/Notifications org.freedesktop.Notifications.Cleanup double:0 uint32:1";
+        }
+        group "E_Config_Binding_Key" struct {
+            value "action" string: "exec";
+            value "any_mod" uchar: 0;
+            value "context" int: 9;
+            value "key" string: "Pause";
+            value "modifiers" int: 4;
+            value "params" string: "dbus-send --type=method_call --dest=org.freedesktop.Notifications /org/freedesktop/Notifications org.freedesktop.Notifications.Redisplay";
         }
         group "E_Config_Binding_Key" struct {
             value "action" string: "shot";
@@ -1864,10 +1872,10 @@ group "E_Config" struct {
             value "prop.offer_resistance" uchar: 0;
             value "prop.pos_h" int: 357;
             value "prop.pos_w" int: 415;
-            value "prop.pos_x" int: 15;
-            value "prop.pos_y" int: 34;
-            value "prop.res_x" int: 1366;
-            value "prop.res_y" int: 768;
+            value "prop.pos_x" int: 445;
+            value "prop.pos_y" int: 24;
+            value "prop.res_x" int: 1920;
+            value "prop.res_y" int: 1080;
             value "prop.shaded" uchar: 0;
             value "prop.skip_pager" uchar: 0;
             value "prop.skip_taskbar" uchar: 0;
@@ -1946,7 +1954,7 @@ group "E_Config" struct {
             value "prop.desk_x" int: 1;
             value "prop.desk_y" int: 0;
             value "prop.fullscreen" uchar: 0;
-            value "prop.h" int: 743;
+            value "prop.h" int: 1055;
             value "prop.head" int: 0;
             value "prop.icon_preference" uchar: 0;
             value "prop.layer" int: 0;
@@ -1974,18 +1982,18 @@ group "E_Config" struct {
             value "prop.lock_user_stacking" uchar: 0;
             value "prop.lock_user_sticky" uchar: 0;
             value "prop.offer_resistance" uchar: 0;
-            value "prop.pos_h" int: 743;
-            value "prop.pos_w" int: 1364;
+            value "prop.pos_h" int: 1080;
+            value "prop.pos_w" int: 1920;
             value "prop.pos_x" int: 0;
             value "prop.pos_y" int: 0;
-            value "prop.res_x" int: 1366;
-            value "prop.res_y" int: 768;
+            value "prop.res_x" int: 1920;
+            value "prop.res_y" int: 1080;
             value "prop.shaded" uchar: 0;
             value "prop.skip_pager" uchar: 0;
             value "prop.skip_taskbar" uchar: 0;
             value "prop.skip_winlist" uchar: 0;
             value "prop.sticky" uchar: 0;
-            value "prop.w" int: 1364;
+            value "prop.w" int: 1918;
             value "prop.zone" int: 0;
             value "role" string: "browser";
             value "transient" uchar: 0;
@@ -2119,7 +2127,7 @@ group "E_Config" struct {
             value "prop.desk_x" int: 1;
             value "prop.desk_y" int: 0;
             value "prop.fullscreen" uchar: 0;
-            value "prop.h" int: 139;
+            value "prop.h" int: 317;
             value "prop.head" int: 0;
             value "prop.icon_preference" uchar: 0;
             value "prop.layer" int: 100;
@@ -2147,18 +2155,18 @@ group "E_Config" struct {
             value "prop.lock_user_stacking" uchar: 0;
             value "prop.lock_user_sticky" uchar: 0;
             value "prop.offer_resistance" uchar: 1;
-            value "prop.pos_h" int: 139;
-            value "prop.pos_w" int: 496;
-            value "prop.pos_x" int: 449;
-            value "prop.pos_y" int: 106;
-            value "prop.res_x" int: 1366;
-            value "prop.res_y" int: 768;
+            value "prop.pos_h" int: 317;
+            value "prop.pos_w" int: 363;
+            value "prop.pos_x" int: 197;
+            value "prop.pos_y" int: 67;
+            value "prop.res_x" int: 1920;
+            value "prop.res_y" int: 1080;
             value "prop.shaded" uchar: 50;
             value "prop.skip_pager" uchar: 0;
             value "prop.skip_taskbar" uchar: 0;
             value "prop.skip_winlist" uchar: 0;
             value "prop.sticky" uchar: 0;
-            value "prop.w" int: 496;
+            value "prop.w" int: 363;
             value "prop.zone" int: 0;
             value "transient" uchar: 0;
             value "type" int: 7;
@@ -4614,9 +4622,9 @@ group "E_Config" struct {
             value "prop.pos_h" int: 576;
             value "prop.pos_w" int: 683;
             value "prop.pos_x" int: 19;
-            value "prop.pos_y" int: 168;
-            value "prop.res_x" int: 1366;
-            value "prop.res_y" int: 768;
+            value "prop.pos_y" int: 324;
+            value "prop.res_x" int: 1920;
+            value "prop.res_y" int: 1080;
             value "prop.shaded" uchar: 0;
             value "prop.skip_pager" uchar: 0;
             value "prop.skip_taskbar" uchar: 0;
@@ -6349,10 +6357,10 @@ group "E_Config" struct {
             value "prop.offer_resistance" uchar: 0;
             value "prop.pos_h" int: 105;
             value "prop.pos_w" int: 293;
-            value "prop.pos_x" int: 535;
-            value "prop.pos_y" int: 322;
-            value "prop.res_x" int: 1366;
-            value "prop.res_y" int: 768;
+            value "prop.pos_x" int: 812;
+            value "prop.pos_y" int: 478;
+            value "prop.res_x" int: 1920;
+            value "prop.res_y" int: 1080;
             value "prop.shaded" uchar: 0;
             value "prop.skip_pager" uchar: 0;
             value "prop.skip_taskbar" uchar: 0;
@@ -6405,10 +6413,10 @@ group "E_Config" struct {
             value "prop.offer_resistance" uchar: 0;
             value "prop.pos_h" int: 358;
             value "prop.pos_w" int: 455;
-            value "prop.pos_x" int: 340;
-            value "prop.pos_y" int: 180;
-            value "prop.res_x" int: 1366;
-            value "prop.res_y" int: 768;
+            value "prop.pos_x" int: 617;
+            value "prop.pos_y" int: 336;
+            value "prop.res_x" int: 1920;
+            value "prop.res_y" int: 1080;
             value "prop.shaded" uchar: 0;
             value "prop.skip_pager" uchar: 0;
             value "prop.skip_taskbar" uchar: 0;
@@ -6741,10 +6749,10 @@ group "E_Config" struct {
             value "prop.offer_resistance" uchar: 0;
             value "prop.pos_h" int: 57;
             value "prop.pos_w" int: 221;
-            value "prop.pos_x" int: 600;
-            value "prop.pos_y" int: 343;
-            value "prop.res_x" int: 1366;
-            value "prop.res_y" int: 768;
+            value "prop.pos_x" int: 877;
+            value "prop.pos_y" int: 499;
+            value "prop.res_x" int: 1920;
+            value "prop.res_y" int: 1080;
             value "prop.shaded" uchar: 0;
             value "prop.skip_pager" uchar: 0;
             value "prop.skip_taskbar" uchar: 0;
@@ -7047,7 +7055,7 @@ group "E_Config" struct {
             value "prop.desk_x" int: 0;
             value "prop.desk_y" int: 0;
             value "prop.fullscreen" uchar: 0;
-            value "prop.h" int: 368;
+            value "prop.h" int: 447;
             value "prop.head" int: 0;
             value "prop.icon_preference" uchar: 0;
             value "prop.layer" int: 0;
@@ -7075,18 +7083,18 @@ group "E_Config" struct {
             value "prop.lock_user_stacking" uchar: 0;
             value "prop.lock_user_sticky" uchar: 0;
             value "prop.offer_resistance" uchar: 0;
-            value "prop.pos_h" int: 368;
-            value "prop.pos_w" int: 362;
-            value "prop.pos_x" int: 501;
-            value "prop.pos_y" int: 189;
-            value "prop.res_x" int: 1366;
-            value "prop.res_y" int: 768;
+            value "prop.pos_h" int: 447;
+            value "prop.pos_w" int: 501;
+            value "prop.pos_x" int: 778;
+            value "prop.pos_y" int: 345;
+            value "prop.res_x" int: 1920;
+            value "prop.res_y" int: 1080;
             value "prop.shaded" uchar: 0;
             value "prop.skip_pager" uchar: 0;
             value "prop.skip_taskbar" uchar: 0;
             value "prop.skip_winlist" uchar: 0;
             value "prop.sticky" uchar: 0;
-            value "prop.w" int: 362;
+            value "prop.w" int: 501;
             value "prop.zone" int: 0;
             value "transient" uchar: 1;
             value "type" int: 7;
@@ -8343,7 +8351,7 @@ group "E_Config" struct {
             value "prop.desk_x" int: 3;
             value "prop.desk_y" int: 0;
             value "prop.fullscreen" uchar: 0;
-            value "prop.h" int: 768;
+            value "prop.h" int: 1080;
             value "prop.head" int: 0;
             value "prop.icon_preference" uchar: 0;
             value "prop.layer" int: 100;
@@ -8371,18 +8379,18 @@ group "E_Config" struct {
             value "prop.lock_user_stacking" uchar: 0;
             value "prop.lock_user_sticky" uchar: 0;
             value "prop.offer_resistance" uchar: 0;
-            value "prop.pos_h" int: 768;
-            value "prop.pos_w" int: 1366;
+            value "prop.pos_h" int: 1080;
+            value "prop.pos_w" int: 1920;
             value "prop.pos_x" int: 0;
             value "prop.pos_y" int: 0;
-            value "prop.res_x" int: 1366;
-            value "prop.res_y" int: 768;
+            value "prop.res_x" int: 1920;
+            value "prop.res_y" int: 1080;
             value "prop.shaded" uchar: 0;
             value "prop.skip_pager" uchar: 0;
             value "prop.skip_taskbar" uchar: 0;
             value "prop.skip_winlist" uchar: 0;
             value "prop.sticky" uchar: 0;
-            value "prop.w" int: 1366;
+            value "prop.w" int: 1920;
             value "prop.zone" int: 0;
             value "role" string: "mainwindow";
             value "transient" uchar: 0;
