--- a/e/systemd/user/logtail_notify.service
+++ b/e/systemd/user/logtail_notify.service
@@ -1,9 +1,10 @@
 [Unit]
-After=X.target
+After=X.target notification-thing.service
+Requires=notification-thing.service
 
 [Service]
 SyslogIdentifier=%p
-ExecStart=/usr/bin/env notify.logtail\
-	-i ${HOME}/media/appz/icons/biohazard_48x.png\
-	-x ${XDG_RUNTIME_DIR}/logtail_notify.db\
-	/var/log/syslog/stripped.log
+ExecStart=/usr/bin/env logtail_notify\
+ -i ${HOME}/media/appz/icons/biohazard_48x.png\
+ -x ${XDG_RUNTIME_DIR}/logtail_notify.db\
+ /var/log/syslog/stripped.log
