--- a/e/systemd/user/notification-thing.service
+++ b/e/systemd/user/notification-thing.service
@@ -4,6 +4,4 @@ After=X.target
 [Service]
 SyslogIdentifier=%p
 Restart=always
-ExecStart=/usr/bin/env notification-thing\
- --activity-timeout 0\
- --net-pub-bind 0.0.0.0:8159 --net-sub-bind 0.0.0.0:8158
+ExecStart=/usr/bin/env notification-thing --activity-timeout 0 --conf ${HOME}/.notification.yaml
