e.systemd.user: don't bind systemd-exit to E, use PartOf=startx instead

--- a/e/systemd/user/enlightenment.service
+++ b/e/systemd/user/enlightenment.service
@@ -1,9 +1,9 @@
 [Unit]
 After=X.target
 Before=background.target xsettings.service
+PartOf=startx.target
 
 [Service]
 SyslogIdentifier=%p
 KillMode=none
 ExecStart=/usr/bin/env enlightenment_start -locked
-ExecStopPost=-/bin/sh -c 'test -e "$HOME"/.e/logout_after && /usr/bin/env pkill -INT -U 1000 -x systemd'
