--- a/e/systemd/user/logtail_notify.service
+++ b/e/systemd/user/logtail_notify.service
@@ -1,6 +1,7 @@
 [Unit]
-After=X.target notification-thing.service
 Requires=notification-thing.service
+After=X.target notification-thing.service
+PartOf=startx.target
 
 [Service]
 SyslogIdentifier=%p
