--- a/e/systemd/user/X.service
+++ b/e/systemd/user/X.service
@@ -4,4 +4,4 @@ Before=X.target
 
 [Service]
 SyslogIdentifier=%p
-ExecStart=/usr/bin/X $DISPLAY
+ExecStart=/usr/lib/systemd/systemd-multi-seat-x $DISPLAY
