e.systemd.system.display-manager: update for systemd-210

--- a/e/systemd/system/display-manager.service
+++ b/e/systemd/system/display-manager.service
@@ -5,17 +5,19 @@ After=systemd-user-sessions.service
 Type=notify
 NotifyAccess=all
 PAMName=systemd-user
-Slice=user-fraggod.slice
 
 User=fraggod
+Slice=user-fraggod.slice
+
 Environment=DISPLAY=:1
-Environment=SHELL=%s
-Environment=DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/fraggod/dbus/user_bus_socket
+Environment=DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/%u/dbus/user_bus_socket
+Environment=XDG_SESSION_TYPE=x11
+Environment=XDG_SESSION_CLASS=user
 
 PermissionsStartOnly=true
-ExecStartPre=-/bin/mkdir -p -m700 /run/user/fraggod
-ExecStartPre=-/bin/chown fraggod: /run/user/fraggod
-ExecStart=-/bin/sh %h/.xinitrc
+ExecStartPre=-/bin/mkdir -p -m700 /run/user/%u
+ExecStartPre=-/bin/chown %u: /run/user/%u
+ExecStart=-/bin/sh /home/%u/.xinitrc
 ExecStopPost=-/bin/sync
 
 [Install]
