e.systemd: +xsettings.timer, silence enlightenment.service

--- a/e/systemd/user/enlightenment.service
+++ b/e/systemd/user/enlightenment.service
@@ -7,3 +7,7 @@ PartOf=startx.target
 SyslogIdentifier=%p
 KillMode=none
 ExecStart=/usr/bin/env enlightenment_start -locked
+
+## Produces way too much crap to keep in any logs
+StandardOutput=null
+StandardError=null
