--- a/e/systemd/user/xsettings.service
+++ b/e/systemd/user/xsettings.service
@@ -4,10 +4,7 @@ PartOf=startx.target
 
 [Service]
 Type=oneshot
+RemainAfterExit=yes
 SyslogIdentifier=%p
 ExecStart=/usr/bin/env xinitrc.input
 ExecStart=/usr/bin/env xinitrc.misc
-
-# For some reason, xinput overrides jam X
-#  for a second, which breaks E startup in some cases
-ExecStartPre=/bin/sleep 20
