e.cfg: edge bindings, but with clixz

--- a/e/e.cfg
+++ b/e/e.cfg
@@ -1388,6 +1388,28 @@ group "E_Config_Bindings" struct {
             value "type" int: 6;
         }
     }
+    group "edge_bindings" list {
+        group "E_Config_Binding_Edge" struct {
+            value "action" string: "desk_flip_by";
+            value "any_mod" uchar: 0;
+            value "context" int: 3;
+            value "delay" float: -1.0000000000000000000000000;
+            value "drag_only" uchar: 0;
+            value "edge" uchar: 1;
+            value "modifiers" int: 0;
+            value "params" string: "-1 0";
+        }
+        group "E_Config_Binding_Edge" struct {
+            value "action" string: "desk_flip_by";
+            value "any_mod" uchar: 0;
+            value "context" int: 3;
+            value "delay" float: -1.0000000000000000000000000;
+            value "drag_only" uchar: 0;
+            value "edge" uchar: 2;
+            value "modifiers" int: 0;
+            value "params" string: "1 0";
+        }
+    }
     group "key_bindings" list {
         group "E_Config_Binding_Key" struct {
             value "action" string: "exec";
