--- a/conky/rc.desktop
+++ b/conky/rc.desktop
@@ -80,7 +80,7 @@ ${template4 90 70 mem RAM}
 ${template4 80 60 swap Swap}
 ${color lightgrey}Processes:$color $processes  \
 ${color lightgrey}Running:$color $running_processes${alignr}\
-${color lightgrey}${if_empty ${lua file_cap_read Apple%sWireless}}${else}Keyboard charge: ${lua file_cap_read Apple%sWireless}${endif}
+${color lightgrey}${if_empty ${lua file_cap_read Apple%sWireless}}${else}Keyboard charge: ${lua file_cap_read Apple Wireless}${endif}
 ${color light slate gray}${cpugraph cpu0 20,400 0000ff 00ff00}\
 \
 $color$stippled_hr
