--- a/conky/rc.desktop
+++ b/conky/rc.desktop
@@ -52,7 +52,7 @@ color2 4444cc
 template0 ${color \1}${top name \2}${offset -30}${tab 40}${top pid \2}${tab 20}${top cpu \2}${tab 20}${top mem \2}${tab 100}${top_mem name \2}${offset -30}${tab 145}${top_mem pid \2}${tab 165}${top_mem cpu \2}${tab 185}${top_mem mem \2}$color
 template1 ${if_mounted \2}${color lightgrey}\1 ${lua_parse rings_marker fs_\1}${tab 60 1}$color${if_match ${fs_free_perc \2} <= \3}${color red}${endif}${fs_free \2} (${fs_free_perc \2}%)${if_match ${fs_free_perc \2} <= \3}${blink !!!!!}${endif}${tab 90}${fs_bar \2}$color${endif}
 template2 $color ${tcp_portmon \1 \2 rhost \3} ${alignr} ${tcp_portmon \1 \2 \4 \3} $color
-
+template3 ${color lightgrey}${if_empty ${lua sens_read \2}}${else}${if_match ${lua sens_read \2} > \3}${color red}\1: ${lua sens_read \2}C${blink !!!}${else}\1: ${color}${lua sens_read \2}C${endif}${endif}
 template4 ${color lightgrey}${if_match $\3perc >= \1}${color red}${endif}\4 ${lua_parse rings_marker \3}${tab 25}$color${if_match $\3perc >= \1}${color red}${endif}$\3/$\3max - $\3perc%${tab 60}${color light slate gray}${if_match $\3perc >= \2}${color maroon}${endif}${if_match $\3perc >= \1}${color red}${endif}${\3bar}
 template5 ${color darkred}${if_up \1}${color\2}${endif}${addr \1}${color lightgrey}
 template6 ${color\2}${downspeedgraph \1 30,190 aa3333 3333aa 0 -t -l}${alignr}${color\2}${upspeedgraph \1 30,190 3333aa aa3333 0 -t -l}
@@ -80,7 +80,10 @@ ${template4 90 70 mem RAM}
 ${template4 80 60 swap Swap}
 ${color lightgrey}Processes:$color $processes  \
 ${color lightgrey}Running:$color $running_processes${alignr}\
-${color lightgrey}${if_empty ${lua file_cap_read Apple%sWireless}}${else}Keyboard charge: ${lua file_cap_read Apple Wireless}${endif}
+${template3 cpu atk0110-0-0__temp1_input 60}\
+${color lightgrey}, ${template3 mb atk0110-0-0__temp2_input 60}\
+${color lightgrey}, ${template3 gpu radeon-0-400__temp1_input 80}\
+${color lightgrey}, ${if_empty ${lua file_cap_read Apple Wireless}}${else}kb_batt: ${color}${lua file_cap_read Apple Wireless}${endif}
 ${color light slate gray}${cpugraph cpu0 20,400 0000ff 00ff00}\
 \
 $color$stippled_hr
