--- a/conky/rc.desktop
+++ b/conky/rc.desktop
@@ -83,7 +83,7 @@ ${color lightgrey}Running:$color $running_processes${alignr}\
 ${template3 cpu atk0110-0-0__temp1_input 60}\
 ${color lightgrey}, ${template3 mb atk0110-0-0__temp2_input 60}\
 ${color lightgrey}, ${template3 gpu radeon-0-400__temp1_input 80}\
-${color lightgrey}, ${if_empty ${lua file_cap_read Apple Wireless}}${else}kb_batt: ${color}${lua file_cap_read Apple Wireless}${endif}
+${if_empty ${lua file_cap_read Apple Wireless}}${else}${color lightgrey}, kb_batt: ${color}${lua file_cap_read Apple Wireless}${endif}
 ${color light slate gray}${cpugraph cpu0 20,400 0000ff 00ff00}\
 \
 $color$stippled_hr
