e: misc auto-updates

--- a/e/e.cfg
+++ b/e/e.cfg
@@ -3,6 +3,7 @@ group "E_Config" struct {
     group "desklock_backgrounds" list {
         group "E_Config_Desklock_Background" struct {
             value "file" string: "/tmp/bg.png";
+            value "hide_logo" uchar: 0;
         }
     }
     group "desktop_backgrounds" list {
@@ -11,6 +12,7 @@ group "E_Config" struct {
             value "desk_x" int: 0;
             value "desk_y" int: 0;
             value "file" string: "/tmp/bg.png";
+            value "manager" int: 0;
             value "zone" int: 0;
         }
         group "E_Config_Desktop_Background" struct {
@@ -18,6 +20,7 @@ group "E_Config" struct {
             value "desk_x" int: 1;
             value "desk_y" int: 0;
             value "file" string: "/tmp/bg.png";
+            value "manager" int: 0;
             value "zone" int: 0;
         }
         group "E_Config_Desktop_Background" struct {
@@ -25,6 +28,7 @@ group "E_Config" struct {
             value "desk_x" int: 2;
             value "desk_y" int: 0;
             value "file" string: "/tmp/bg.png";
+            value "manager" int: 0;
             value "zone" int: 0;
         }
         group "E_Config_Desktop_Background" struct {
@@ -32,6 +36,7 @@ group "E_Config" struct {
             value "desk_x" int: 3;
             value "desk_y" int: 0;
             value "file" string: "/tmp/bg.png";
+            value "manager" int: 0;
             value "zone" int: 0;
         }
         group "E_Config_Desktop_Background" struct {
@@ -39,6 +44,7 @@ group "E_Config" struct {
             value "desk_x" int: 4;
             value "desk_y" int: 0;
             value "file" string: "/tmp/bg.png";
+            value "manager" int: 0;
             value "zone" int: 0;
         }
         group "E_Config_Desktop_Background" struct {
@@ -46,6 +52,7 @@ group "E_Config" struct {
             value "desk_x" int: 5;
             value "desk_y" int: 0;
             value "file" string: "/tmp/bg.png";
+            value "manager" int: 0;
             value "zone" int: 0;
         }
     }
@@ -54,6 +61,7 @@ group "E_Config" struct {
             value "container" int: 0;
             value "desk_x" int: 0;
             value "desk_y" int: 0;
+            value "manager" int: 0;
             value "name" string: "CNC";
             value "zone" int: 0;
         }
@@ -61,6 +69,7 @@ group "E_Config" struct {
             value "container" int: 0;
             value "desk_x" int: 1;
             value "desk_y" int: 0;
+            value "manager" int: 0;
             value "name" string: "Web";
             value "zone" int: 0;
         }
@@ -68,6 +77,7 @@ group "E_Config" struct {
             value "container" int: 0;
             value "desk_x" int: 2;
             value "desk_y" int: 0;
+            value "manager" int: 0;
             value "name" string: "Emacs";
             value "zone" int: 0;
         }
@@ -75,6 +85,7 @@ group "E_Config" struct {
             value "container" int: 0;
             value "desk_x" int: 3;
             value "desk_y" int: 0;
+            value "manager" int: 0;
             value "name" string: "Mail";
             value "zone" int: 0;
         }
@@ -846,12 +857,6 @@ group "E_Config" struct {
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
-            value "delayed" uchar: 0;
-            value "enabled" uchar: 1;
-            value "name" string: "conf_comp";
-            value "priority" int: -1000;
-        }
-        group "E_Config_Module" struct {
             value "delayed" uchar: 1;
             value "enabled" uchar: 1;
             value "name" string: "conf_dialogs";
@@ -972,6 +977,12 @@ group "E_Config" struct {
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 1;
+            value "name" string: "lokker";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
             value "delayed" uchar: 1;
             value "enabled" uchar: 0;
             value "name" string: "mixer";
@@ -1057,11 +1068,12 @@ group "E_Config" struct {
             value "hide_duration" float: 1.0000000000000000000000000;
             value "hide_timeout" float: 1.0000000000000000000000000;
             value "id" int: 1;
-            value "layer" int: 150;
+            value "layer" int: 250;
+            value "manager" int: 0;
             value "name" string: "shelf";
             value "orient" int: 9;
             value "overlap" int: 1;
-            value "popup" uchar: 1;
+            value "popup" uchar: 0;
             value "size" int: 28;
             value "style" string: "default";
             value "zone" int: 0;
@@ -1169,7 +1181,7 @@ group "E_Config" struct {
     value "clientlist_warp_to_iconified_desktop" int: 0;
     value "cnfmdlg_disabled" int: 0;
     value "config_type" uint: 3;
-    value "config_version" int: 1000013;
+    value "config_version" int: 1000017;
     value "cursor_size" int: 32;
     value "default_system_menu" string: "/usr/etc/xdg/menus/enlightenment.menu";
     value "desk_auto_switch" int: 0;
@@ -1189,6 +1201,8 @@ group "E_Config" struct {
     value "desklock_autolock_screensaver" int: 1;
     value "desklock_login_box_zone" int: -1;
     value "desklock_on_suspend" int: 1;
+    value "desklock_passwd" int: 0;
+    value "desklock_pin" int: 0;
     value "desklock_post_screensaver_time" double: 300.0000000000000000000000000;
     value "desklock_start_locked" int: 0;
     value "desklock_use_custom_desklock" int: 0;
@@ -1259,6 +1273,7 @@ group "E_Config" struct {
     value "move_info_follows" int: 1;
     value "move_info_visible" int: 1;
     value "multiscreen_flip" int: 0;
+    value "no_dpms_on_fullscreen" uchar: 0;
     value "no_module_delay" int: 0;
     value "null_container_win" uchar: 0;
     value "pass_click_on" int: 1;
@@ -1274,6 +1289,7 @@ group "E_Config" struct {
     value "powersave.min" int: 0;
     value "powersave.none" double: 0.2500000000000000000000000;
     value "priority" int: 3;
+    value "raise_on_revert_focus" int: 0;
     value "remember_internal_fm_windows" uchar: 1;
     value "remember_internal_fm_windows_globally" uchar: 0;
     value "remember_internal_windows" int: 3;
@@ -1296,6 +1312,8 @@ group "E_Config" struct {
     value "screensaver_suspend_delay" double: 15.0000000000000000000000000;
     value "screensaver_suspend_on_ac" uchar: 0;
     value "screensaver_timeout" int: 5400;
+    value "screensaver_wake_on_notify" int: 0;
+    value "screensaver_wake_on_urgent" int: 0;
     value "show_cursor" uchar: 1;
     value "show_desktop_icons" int: 1;
     value "show_splash" int: 0;
@@ -1327,7 +1345,6 @@ group "E_Config" struct {
     value "use_desktop_window_profile" int: 0;
     value "use_e_cursor" int: 0;
     value "use_resist" int: 1;
-    value "use_shaped_win" int: 0;
     value "wallpaper_import_last_dev" string: "~/";
     value "wallpaper_import_last_path" string: "/";
     value "window_activehint_policy" int: 2;
@@ -2541,6 +2558,7 @@ group "Comp_Config" struct {
     group "match.popups" list {
     }
     value "disable_screen_effects" uchar: 0;
+    value "enable_advanced_features" uchar: 0;
     value "engine" int: 2;
     value "fast_borders" uchar: 1;
     value "fast_menus" uchar: 1;
@@ -2579,7 +2597,7 @@ group "E_Remember_List" struct {
 group "E_Exehist" struct {
     group "history" list {
     }
-    value "startup_id" int: 1171;
+    value "startup_id" int: 6212;
 }
 ----- file: module.battery.cfg
 group "Battery_Config" struct {
@@ -3014,6 +3032,7 @@ group "IBar_Config" struct {
         group "IBar_Config_Item" struct {
             value "dir" string: "default";
             value "dont_add_nonorder" int: 0;
+            value "dont_icon_menu_mouseover" uchar: 0;
             value "dont_track_launch" uchar: 0;
             value "eap_label" int: 0;
             value "id" string: "0";
@@ -3023,6 +3042,7 @@ group "IBar_Config" struct {
         group "IBar_Config_Item" struct {
             value "dir" string: "default";
             value "dont_add_nonorder" int: 0;
+            value "dont_icon_menu_mouseover" uchar: 0;
             value "dont_track_launch" uchar: 0;
             value "eap_label" int: 0;
             value "id" string: "ibar.1";
