e: some minor module tweaks

--- a/e/e.cfg
+++ b/e/e.cfg
@@ -960,7 +960,7 @@ group "E_Config" struct {
         }
         group "E_Config_Module" struct {
             value "delayed" uchar: 1;
-            value "enabled" uchar: 0;
+            value "enabled" uchar: 1;
             value "name" string: "gadman";
             value "priority" int: 100;
         }
@@ -1034,6 +1034,12 @@ group "E_Config" struct {
             value "delayed" uchar: 0;
             value "enabled" uchar: 1;
             value "name" string: "tasks";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "teamwork";
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
