--- a/conky/rc.desktop
+++ b/conky/rc.desktop
@@ -81,14 +81,14 @@ ${template9 1}${template9 2}${template9 3}${template9 4}
 ${template4 90 70 mem RAM}
 ${template4 80 60 swap Swap}
 ${color lightgrey}Processes:$color $processes  \
-${color lightgrey}Running:$color $running_processes${alignr}\
+${color lightgrey}Running:$color $running_processes\
+${alignr}\
 ${template3 cpu k10temp-0-c3__temp1_input 68}\
 ${color lightgrey}, ${template3 mb atk0110-0-0__temp2_input 60}\
 ${color lightgrey}, ${template3 gpu re:radeon[-]0[-]%d+__temp1_input 80}\
 ${if_empty ${lua file_cap_read Apple Wireless}}${else}${color lightgrey}, kb_batt: ${color}${lua file_cap_read Apple Wireless}${endif}
-${color light slate gray}${cpugraph cpu0 20,400 0000ff 00ff00}\
+${color light slate gray}${cpugraph cpu0 20,400 0000ff 00ff00}
 \
-$color$stippled_hr
 ${color}---=={ CPU${alignr}RAM }==---
 ${template0 #ab1c00 1}
 ${template0 #af442f 2}
