e.systemd.user: updated to use xorg@.socket and more canonical target names

--- a/e/systemd/user/bt_agent.service
+++ b/e/systemd/user/bt_agent.service
@@ -1,9 +1,12 @@
 [Unit]
 Requires=dbus.service
-After=X.target dbus.service
-PartOf=startx.target
+After=xorg.target dbus.service
+PartOf=startx.target bluetooth.target
 
 [Service]
 SyslogIdentifier=%p
 Restart=on-failure
 ExecStart=/usr/bin/env bt_agent -n -a ~/.bt_auth
+
+[Install]
+WantedBy=bluetooth.target
