--- a/e/systemd/user/notification-thing.service
+++ b/e/systemd/user/notification-thing.service
@@ -6,4 +6,5 @@ PartOf=startx.target
 [Service]
 SyslogIdentifier=%p
 Restart=always
+RestartSec=10
 ExecStart=/usr/bin/env notification-thing --activity-timeout 0 --conf ${HOME}/.notification.yaml
